--- a/app/src/main/res/layout/activity_full.xml
+++ b/app/src/main/res/layout/activity_full.xml
@@ -14,11 +14,25 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:background="#FCFCFC"
             android:gravity="center_vertical"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             android:text="@string/title_full"
             android:textColor="#333333"
             android:textSize="17sp" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_toggleFull"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/button_toggleFull" />
     </FrameLayout>
 </LinearLayout>
