--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:background="#FCFCFC"
             android:gravity="center_vertical"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
