--- a/app/src/main/res/layout/activity_full.xml
+++ b/app/src/main/res/layout/activity_full.xml
@@ -23,10 +23,12 @@
             android:textSize="17sp" />
     </FrameLayout>
 
-    <FrameLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_toggleFull"
@@ -34,5 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/button_toggleFull" />
-    </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/button_next" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </LinearLayout>
