--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,10 +22,12 @@
             android:textSize="17sp" />
     </FrameLayout>
 
-    <FrameLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_full"
@@ -33,6 +35,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/button_full" />
-    </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_full2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/button_full2" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </LinearLayout>
